[tool.poetry]
name = "actual-orm"
version = "1.1.3"
description = ""
authors = ["Matt Sessions <me@matthewsessions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
asyncpg = "^0.30.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
actual = "actual_orm.cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
